@@ -1361,13 +1361,15 @@ list, nor will they receive any TELL messages from players on this list.
 
 INVENTORY=\
 Command : INVENTORY\n\r\
-Usage   : INVENTORY ([MASK])\n\r\
+Usage   : INVENTORY (LONG) ([MASK])\n\r\
 Example : inventory\n\r\
+Example : inventory long\n\r\
 Example : inventory sword\n\r\
 Short(s): inv\n\r\
 Lists all the items in your carried inventory.  This does not include \
 any items that may be worn.  Use the EQUIPMENT command to view what \
-is being worn.  You may include a mask to view a subset of your inventory.
+is being worn.  You may include a mask to view a subset of your inventory. \
+The long argument can be used to see what's in all containers.
 
 KILL=\
 Command : KILL\n\r\
