@@ -46,6 +46,7 @@
   44. New INI entry: PROWESSOPTIONS, for controlling how combat/armor prowess is displayed.
   45. New Archon Skill: Infect, for giving mobs/players random diseases.
   46. Unpaid property taxes now generate both tell and email warnings.
+  47. INVENTORY command now has LONG argument, similar to LONGLOOK.
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
